data/all_generated_tests/raw_wast_tests/return_IncorrectConditionEvaluation_2865.wast
;; 4. **Multiple `br_if` Conditions with Return**:    - Design a function with multiple `br_if` conditions that modify control flow based on stack values, followed by a return instruction. Test to ensure the correct path is returned from.    - **Reasoning**: Checks for incorrect condition evaluations affecting return behavior, ensuring proper stack type consistency and operand handling.

(assert_invalid
  (module
    (func $multiple-br_if-conditions-with-return (result i32)
      (i32.const 0)
      (br_if 0 (return))
      (i32.const 1)
      (br_if 0 (return))
      (i32.const 2)
    )
  )
  "type mismatch"
)